--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,7 @@
-/* body{
-  background: black;
-  color: white;
-  padding: 25px;
-  font-family: sans-serif;
-
-}
-
-.portfolioPicture{
-  width: 320px;
-}
-
-h1{
-  font-size: 4rem;
-}
-
-h2{
-  font-size: 2rem;
-} */
-
 body {
   margin: 0;
   padding: 0;
+  background: #66cdaa;
 }
 
 .video-background {
