--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,7 @@ h1 {
   width: 320px;
   position: relative;
   z-index: 1;
+  margin-inline-end: 4rem;
 }
 
 h2 {
@@ -36,4 +37,9 @@ h2 {
   position: relative;
   z-index: 1;
   color: black;
+  font-size: 2rem;
+}
+
+section{
+  display: flex;
 }
