--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,10 @@ h2 {
 font-size: 2rem;
 }
 
+.work {
+  padding-bottom: 1em;
+}
+
 section{
   display: flex;
 }
@@ -44,4 +48,16 @@ hr {
   height: 2px;
   color: #333;
   background-color: #333;
+}
+
+footer {
+  text-align: center;
+  padding: 2px;
+  background-color: white;
+  color: #000;
+}
+
+li {
+  list-style: inside;
+  font-size: large;
 }
